@@ -4,27 +4,25 @@ import com.hh.testproject.exceptions.NotFoundException;
 import com.hh.testproject.exceptions.ValidationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class ErrorHandler {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<List<String>> handleValidationErrors(MethodArgumentNotValidException ex) {
+    public ResponseEntity<String> handleValidationErrors(MethodArgumentNotValidException ex) {
         List<String> errors = ex.getFieldErrors()
-            .stream().map(FieldError::getDefaultMessage).collect(Collectors.toList());
-        return new ResponseEntity<>(errors, HttpStatus.BAD_REQUEST);
+            .stream().map(FieldError::getDefaultMessage).toList();
+        return new ResponseEntity<>(errors.get(0), HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity<String> handleEnumValidationErrors(HttpMessageNotReadableException ex) {
+    @ExceptionHandler(IllegalArgumentException.class)
+    public ResponseEntity<String> handleEnumValidationErrors(IllegalArgumentException ex) {
         return new ResponseEntity<>("operation types: WITHDRAW or DEPOSIT",HttpStatus.BAD_REQUEST);
     }
 
